--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900;&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway"
       rel="stylesheet"
     />
     <title>Vahan Sahakyan | CV</title>
