added avatar, changed bg and headers

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
       href="https://fonts.googleapis.com/css2?family=Raleway"
       rel="stylesheet"
     />
-    <title>Vahan Sahakyan | CV</title>
+
+    <link
+      href="https://fonts.googleapis.com/css?family=Old+Standard+TT:400i|Rubik"
+      rel="stylesheet"
+    />
+    <title>Curriculum Vitae | Vahan Sahakyan</title>
   </head>
   <body>
     <div class="cover">
@@ -19,76 +24,90 @@
         <div class="middle">
           <!-- The A4 CV Paper -->
           <div class="a4">
+            <div class="glass">
+              <div class="phone">+374 95 27 68 27</div>
+              <div class="email">vahan.sahakyan@yahoo.com</div>
+            </div>
             <div class="wrapper">
               <header>
-                <h1>
+                <h1 class="full-name">
                   VAHAN <br />
                   <span>SAHAKYAN</span>
                 </h1>
+                <div class="avatar"></div>
               </header>
               <div class="content-wrapper">
                 <aside>
-                  <h2>SKILLS</h2>
-                  <h3>PROFESSIONAL</h3>
+                  <div class="skills">
+                    <h2>SKILLS</h2>
+                    <h3>PROFESSIONAL</h3>
 
-                  <ul>
-                    <li>Web Design</li>
-                    <li>User Interface</li>
-                    <li>HTML/CSS</li>
-                    <li>UI/UX</li>
-                    <li>JavaScript</li>
-                    <li>React JS</li>
-                    <li>OOP</li>
-                  </ul>
-                  <h2>EDUCATION</h2>
-                  <h3>DEGREE TITLE</h3>
-                  <p>UNIVERSITY NAME</p>
-                  <p>2030-2032</p>
-                  <h3>DEGREE TITLE</h3>
-                  <p>UNIVERSITY NAME</p>
-                  <p>2030-2032</p>
+                    <ul>
+                      <li>Web Design</li>
+                      <li>User Interface</li>
+                      <li>HTML/CSS</li>
+                      <li>UI/UX</li>
+                      <li>JavaScript</li>
+                      <li>React JS</li>
+                      <li>OOP</li>
+                    </ul>
+                  </div>
+                  <div class="education">
+                    <h2>EDUCATION</h2>
+                    <h3>BPC Armenia</h3>
+                    <p>C++, Python, Linux, Bash</p>
+                    <p>2018-2019</p>
+                    <h3>UDEMY: Jonas Schmedtmann</h3>
+                    <p>The Complete JS Course</p>
+                    <p>2021-2022</p>
+                    <h3>ZTM: Andrei Neagoie</h3>
+                    <p>REACT.js Course</p>
+                    <p>2021-2022</p>
+                  </div>
                 </aside>
                 <div class="content">
-                  <h2>EXPERIENCE</h2>
-                  <h3>JOB TITLE</h3>
-                  <h4>COMPANY NAME</h4>
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Ullam molestias asperiores nesciunt perferendis, aut amet
-                    iste laboriosam rerum mollitia? Quasi, laborum vitae alias
-                  </p>
-                  <ul>
-                    <li>There are many ipsa tempore quasi</li>
-                    <li>Majority have been nostrum officiis enim!</li>
+                  <div class="experience">
+                    <h2>PROJECTS</h2>
+                    <h3>FORKIFY | <span>JavaScript</span></h3>
+                    <h4>Recipe Application</h4>
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Ullam molestias asperiores nesciunt perferendis, aut amet
+                      iste laboriosam rerum mollitia? Quasi, laborum vitae alias
+                    </p>
+                    <ul>
+                      <li>There are many ipsa tempore quasi</li>
+                      <li>Majority have been nostrum officiis enim!</li>
 
-                    <li>Ullam molestias asperiores nesciunt , aut amet</li>
-                  </ul>
-                  <h3>JOB TITLE</h3>
-                  <h4>COMPANY NAME</h4>
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Ullam molestias asperiores nesciunt perferendis, aut amet
-                    iste laboriosam rerum mollitia? Quasi, laborum vitae alias
-                  </p>
-                  <ul>
-                    <li>There are many ipsa tempore quasi</li>
-                    <li>Majority have been nostrum officiis enim!</li>
+                      <li>Ullam molestias asperiores nesciunt , aut amet</li>
+                    </ul>
+                    <h3>CRWN CLOTHING | <span>React</span></h3>
+                    <h4>E-Commerce Application</h4>
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Ullam molestias asperiores nesciunt perferendis, aut amet
+                      iste laboriosam rerum mollitia? Quasi, laborum vitae alias
+                    </p>
+                    <ul>
+                      <li>There are many ipsa tempore quasi</li>
+                      <li>Majority have been nostrum officiis enim!</li>
 
-                    <li>Ullam molestias asperiores nesciunt , aut amet</li>
-                  </ul>
-                  <h3>JOB TITLE</h3>
-                  <h4>COMPANY NAME</h4>
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Ullam molestias asperiores nesciunt perferendis, aut amet
-                    iste laboriosam rerum mollitia? Quasi, laborum vitae alias
-                  </p>
-                  <ul>
-                    <li>There are many ipsa tempore quasi</li>
-                    <li>Majority have been nostrum officiis enim!</li>
+                      <li>Ullam molestias asperiores nesciunt , aut amet</li>
+                    </ul>
+                    <h3>E-PIANO | <span>JavaScript</span></h3>
+                    <h4>Musical Intrument Application</h4>
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Ullam molestias asperiores nesciunt perferendis, aut amet
+                      iste laboriosam rerum mollitia? Quasi, laborum vitae alias
+                    </p>
+                    <ul>
+                      <li>There are many ipsa tempore quasi</li>
+                      <li>Majority have been nostrum officiis enim!</li>
 
-                    <li>Ullam molestias asperiores nesciunt , aut amet</li>
-                  </ul>
+                      <li>Ullam molestias asperiores nesciunt , aut amet</li>
+                    </ul>
+                  </div>
                 </div>
               </div>
             </div>
