added Google fonts

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       href="https://fonts.googleapis.com/css?family=Old+Standard+TT:400i|Rubik"
       rel="stylesheet"
     />
-    <title>Curriculum Vitae | Vahan Sahakyan</title>
+    <title>Curriculum Vitae Vahan | Sahakyan</title>
   </head>
   <body>
     <div class="cover">
@@ -68,7 +68,7 @@
                 <div class="content">
                   <div class="experience">
                     <h2>PROJECTS</h2>
-                    <h3>FORKIFY | <span>JavaScript</span></h3>
+                    <h3>FORKIFY <span> | JavaScript</span></h3>
                     <h4>Recipe Application</h4>
                     <p>
                       Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -81,7 +81,7 @@
 
                       <li>Ullam molestias asperiores nesciunt , aut amet</li>
                     </ul>
-                    <h3>CRWN CLOTHING | <span>React</span></h3>
+                    <h3>CRWN CLOTHING <span> | React</span></h3>
                     <h4>E-Commerce Application</h4>
                     <p>
                       Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -94,7 +94,7 @@
 
                       <li>Ullam molestias asperiores nesciunt , aut amet</li>
                     </ul>
-                    <h3>E-PIANO | <span>JavaScript</span></h3>
+                    <h3>E-PIANO <span> | JavaScript</span></h3>
                     <h4>Musical Intrument Application</h4>
                     <p>
                       Lorem ipsum dolor sit amet consectetur adipisicing elit.
