added left-side glass

--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
         <div class="middle">
           <!-- The A4 CV Paper -->
           <div class="a4">
-            <div class="glass">
+            <div class="glass"></div>
+            <div class="sticker">
               <div class="phone">+374 95 27 68 27</div>
-              <div class="email">vahan.sahakyan@yahoo.com</div>
+              <div class="email">vahan.sahakyan1996@gmail.com</div>
             </div>
             <div class="wrapper">
               <header>
