--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       href="https://fonts.googleapis.com/css?family=Old+Standard+TT:400i|Rubik"
       rel="stylesheet"
     />
-    <title>Curriculum Vitae Vahan | Sahakyan</title>
+    <title>Curriculum Vitae | Vahan Sahakyan</title>
   </head>
   <body>
     <div class="cover">
