added clipboard message

--- a/index.html
+++ b/index.html
@@ -45,19 +45,14 @@
                 />
               </a>
             </div>
+            <div class="clipboard-message hidden">
+              Email Copied Successfully
+            </div>
             <div class="sticker">
-              <div
-                onclick="copyToClipboard('.phone')"
-                title="Copy to Clipboard"
-                class="phone"
-              >
+              <div title="Copy to Clipboard" class="phone">
                 +374 95 27 68 27
               </div>
-              <div
-                onclick="copyToClipboard('.email')"
-                title="Copy to Clipboard"
-                class="email"
-              >
+              <div title="Copy to Clipboard" class="email">
                 vahan.sahakyan1996@gmail.com
               </div>
             </div>
