fixed profession + other settings

--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
                     <span>SAHAKYAN</span>
                   </h1>
                   <h4 class="profession">JavaScript Developer</h4>
-                  <div class="triangle"></div>
                 </div>
                 <div class="avatar"></div>
               </header>
@@ -150,7 +149,7 @@
         <div class="right"></div>
       </div>
       <!--  -->
-      <div class="footer"></div>
+      <footer></footer>
     </div>
   </body>
 </html>
