added content: mapty, e-piano

--- a/index.html
+++ b/index.html
@@ -76,11 +76,16 @@
 
                     <ul>
                       <li>Web Design</li>
-                      <li>User Interface</li>
+                      <li>JavaScript</li>
                       <li>HTML/CSS</li>
                       <li>UI/UX</li>
-                      <li>JavaScript</li>
-                      <li>React JS</li>
+                      <li>MERN Stack</li>
+                      <ul>
+                        <li><strong>M</strong>ongoDB</li>
+                        <li><strong>E</strong>xpress</li>
+                        <li><strong>R</strong>eact JS</li>
+                        <li><strong>N</strong>ode JS</li>
+                      </ul>
                       <li>OOP</li>
                     </ul>
                   </div>
@@ -90,54 +95,110 @@
                     <p>C++, Python, Linux, Bash</p>
                     <p>2018-2019</p>
                     <h3>UDEMY: Jonas Schmedtmann</h3>
-                    <p>The Complete JS Course</p>
+                    <p>- "The Complete JS Course"</p>
+                    <p>- "Node.js Bootcamp"<br />[MongoDB, Express]</p>
                     <p>2021-2022</p>
                     <h3>ZTM: Andrei Neagoie</h3>
-                    <p>REACT.js Course</p>
+                    <p>- REACT.js Course</p>
                     <p>2021-2022</p>
                   </div>
                 </aside>
                 <div class="content">
                   <div class="experience">
                     <h2>PROJECTS</h2>
-                    <h3>FORKIFY <span> | JavaScript</span></h3>
-                    <h4>Recipe Application</h4>
+                    <h3>
+                      MAPTY
+                      <!-- <span> | JavaScript</span> -->
+                    </h3>
+                    <h4>Workout Application</h4>
                     <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Ullam molestias asperiores nesciunt perferendis, aut amet
-                      iste laboriosam rerum mollitia? Quasi, laborum vitae alias
+                      Mapty is a <strong>Workout Mapping Web-App</strong>. It
+                      saves your workouts and then logs them on the map in ONLY
+                      3 STEPS
+                      <br />
+                      <strong>1.</strong> Click on the map to register the
+                      workout location, which will trigger a workout log to
+                      appear on the left.
+                      <br />
+                      <strong>2.</strong> Select the type of your activity
+                      (cycling or running). <br />
+                      <strong>3.</strong> Fill in the required details about
+                      your workout such as <strong>distance</strong>,
+                      <strong>time</strong>,
+                      <strong>cadence</strong> (steps/min) if running or
+                      <strong>elevation gain</strong>
+                      if cycling. The <strong> pace/speed</strong> will be
+                      calculated automatically.
                     </p>
-                    <ul>
-                      <li>There are many ipsa tempore quasi</li>
-                      <li>Majority have been nostrum officiis enim!</li>
+                    <ul style="margin-top: 4px">
+                      <li>
+                        Mapty is built using the architecture of "Object
+                        Oriented Programming" [OOP] Paradigm.
+                      </li>
+                      <li>
+                        Its logic is implemented using 2 classes: <br />
+                        "Running" and "Cycling" <br />
+                      </li>
 
-                      <li>Ullam molestias asperiores nesciunt , aut amet</li>
+                      <li>Both inherit from a base class named "Workout".</li>
+                      <li>
+                        <a
+                          target="_blank"
+                          href="https://vahan-sahakyan.github.io/mapty"
+                          >Launch Mapty</a
+                        >
+                        |
+                        <a
+                          target="_blank"
+                          href="https://github.com/vahan-sahakyan/mapty/"
+                        >
+                          Source Code</a
+                        >
+                      </li>
                     </ul>
-                    <h3>CRWN CLOTHING <span> | React</span></h3>
-                    <h4>E-Commerce Application</h4>
-                    <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Ullam molestias asperiores nesciunt perferendis, aut amet
-                      iste laboriosam rerum mollitia? Quasi, laborum vitae alias
-                    </p>
-                    <ul>
-                      <li>There are many ipsa tempore quasi</li>
-                      <li>Majority have been nostrum officiis enim!</li>
 
-                      <li>Ullam molestias asperiores nesciunt , aut amet</li>
-                    </ul>
-                    <h3>E-PIANO <span> | JavaScript</span></h3>
+                    <h3 style="margin-top: -25px">
+                      E-PIANO
+                      <!-- <span> | JavaScript</span> -->
+                    </h3>
                     <h4>Musical Intrument Application</h4>
                     <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Ullam molestias asperiores nesciunt perferendis, aut amet
-                      iste laboriosam rerum mollitia? Quasi, laborum vitae alias
+                      E-Piano is a
+                      <strong>Music-Keyboard Emulator</strong> inside your
+                      browser. It allows you to play beautiful chords and
+                      melodies, without even needing an additional
+                      Midi-Controller keyboard attached. All you'll really need
+                      is a regular <strong>typing keyboard</strong> in front of
+                      your PC.
                     </p>
-                    <ul>
-                      <li>There are many ipsa tempore quasi</li>
-                      <li>Majority have been nostrum officiis enim!</li>
-
-                      <li>Ullam molestias asperiores nesciunt , aut amet</li>
+                    <ul style="margin-top: 4px">
+                      <li>
+                        E-Piano is created using only the built-in Web Audio API
+                        of JavaScript.
+                      </li>
+                      <li>
+                        The code is conducted in a modular way, and the
+                        architecture is OOP.
+                      </li>
+                      <li>
+                        The most comfortable/playable environment will be the
+                        Desktop Browser, although it's also possible to run
+                        inside a Mobile Browser.
+                      </li>
+                      <li>
+                        <a
+                          target="_blank"
+                          href="https://vahan-sahakyan.github.io/e-piano"
+                          >Launch E-Piano</a
+                        >
+                        |
+                        <a
+                          target="_blank"
+                          href="https://github.com/vahan-sahakyan/e-piano/"
+                        >
+                          Source Code</a
+                        >
+                      </li>
                     </ul>
                   </div>
                 </div>
