--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       href="https://fonts.googleapis.com/css?family=Old+Standard+TT:400i|Rubik"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/png" href="./favicon.png" />
     <script defer src="./script.js"></script>
     <title>Curriculum Vitae | Vahan Sahakyan</title>
   </head>
