--- a/index.html
+++ b/index.html
@@ -3,21 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=0.5, maximum-scale=0.5"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=0.5, maximum-scale=0.5" />
     <link rel="stylesheet" href="style.css" />
     <link id="dark-css" rel="stylesheet" href="dark.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway" rel="stylesheet" />
 
-    <link
-      href="https://fonts.googleapis.com/css?family=Old+Standard+TT:400i|Rubik"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Old+Standard+TT:400i|Rubik" rel="stylesheet" />
     <link rel="icon" type="image/png" href="./favicon.png" />
     <script defer src="./script.js"></script>
     <title>Curriculum Vitae | Vahan Sahakyan</title>
@@ -32,34 +23,54 @@
           <div class="a4">
             <div class="glass">
               <a href="">
-                <img
+                <svg
                   class="ln-svg"
-                  fill="currentColor"
-                  src="./svg/social-48px-glyph-1_logo-linkedin.svg"
-                  alt="LinkedIn"
-                  title="Go to LinkedIn"
-                />
+                  xmlns="http://www.w3.org/2000/svg"
+                  xmlns:xlink="http://www.w3.org/1999/xlink"
+                  x="0px"
+                  y="0px"
+                  width="48px"
+                  height="48px"
+                  viewBox="0 0 48 48"
+                >
+                  <g>
+                    <path
+                      d="M46,0H2C0.9,0,0,0.9,0,2v44c0,1.1,0.9,2,2,2h44c1.1,0,2-0.9,2-2V2C48,0.9,47.1,0,46,0z M14.2,40.9H7.1V18
+                    h7.1V40.9z M10.7,14.9c-2.3,0-4.1-1.8-4.1-4.1c0-2.3,1.8-4.1,4.1-4.1c2.3,0,4.1,1.8,4.1,4.1C14.8,13,13,14.9,10.7,14.9z M40.9,40.9
+                    h-7.1V29.8c0-2.7,0-6.1-3.7-6.1c-3.7,0-4.3,2.9-4.3,5.9v11.3h-7.1V18h6.8v3.1h0.1c0.9-1.8,3.3-3.7,6.7-3.7c7.2,0,8.5,4.7,8.5,10.9
+                    V40.9z"
+                    />
+                  </g>
+                </svg>
               </a>
               <a href="">
-                <img
+                <svg
                   class="gh-svg"
-                  fill="currentColor"
-                  src="./svg/social-48px-glyph-1_logo-github.svg"
-                  alt="GitHub"
-                  title="Go to GitHub"
-                />
+                  xmlns="http://www.w3.org/2000/svg"
+                  xmlns:xlink="http://www.w3.org/1999/xlink"
+                  x="0px"
+                  y="0px"
+                  width="48px"
+                  height="48px"
+                  viewBox="0 0 48 48"
+                >
+                  <g>
+                    <path
+                      d="M24,0.6c-13.3,0-24,10.7-24,24c0,10.6,6.9,19.6,16.4,22.8
+                    c1.2,0.2,1.6-0.5,1.6-1.2c0-0.6,0-2.1,0-4.1c-6.7,1.5-8.1-3.2-8.1-3.2c-1.1-2.8-2.7-3.5-2.7-3.5c-2.2-1.5,0.2-1.5,0.2-1.5
+                    c2.4,0.2,3.7,2.5,3.7,2.5c2.1,3.7,5.6,2.6,7,2c0.2-1.6,0.8-2.6,1.5-3.2c-5.3-0.6-10.9-2.7-10.9-11.9c0-2.6,0.9-4.8,2.5-6.4
+                    c-0.2-0.6-1.1-3,0.2-6.4c0,0,2-0.6,6.6,2.5c1.9-0.5,4-0.8,6-0.8c2,0,4.1,0.3,6,0.8c4.6-3.1,6.6-2.5,6.6-2.5c1.3,3.3,0.5,5.7,0.2,6.4
+                    c1.5,1.7,2.5,3.8,2.5,6.4c0,9.2-5.6,11.2-11,11.8c0.9,0.7,1.6,2.2,1.6,4.4c0,3.2,0,5.8,0,6.6c0,0.6,0.4,1.4,1.7,1.2
+                    C41.1,44.2,48,35.2,48,24.6C48,11.3,37.3,0.6,24,0.6z"
+                    />
+                  </g>
+                </svg>
               </a>
             </div>
-            <div class="clipboard-message hidden">
-              Email Copied Successfully
-            </div>
+            <div class="clipboard-message hidden">Email Copied Successfully</div>
             <div class="sticker">
-              <div title="Copy to Clipboard" class="phone">
-                +374 95 27 68 27
-              </div>
-              <div title="Copy to Clipboard" class="email">
-                vahan.sahakyan1996@gmail.com
-              </div>
+              <div title="Copy to Clipboard" class="phone">+374 95 27 68 27</div>
+              <div title="Copy to Clipboard" class="email">vahan.sahakyan1996@gmail.com</div>
             </div>
             <div class="wrapper">
               <header>
@@ -116,29 +127,21 @@
                     </h3>
                     <h4>Workout Application</h4>
                     <p>
-                      Mapty is a <strong>Workout Mapping Web-App</strong>. It
-                      saves your workouts and then logs them on the map in ONLY
-                      3 STEPS
+                      Mapty is a <strong>Workout Mapping Web-App</strong>. It saves your workouts and then logs them on
+                      the map in ONLY 3 STEPS
                       <br />
-                      <strong>1.</strong> Click on the map to register the
-                      workout location, which will trigger a workout log to
-                      appear on the left.
+                      <strong>1.</strong> Click on the map to register the workout location, which will trigger a
+                      workout log to appear on the left.
                       <br />
-                      <strong>2.</strong> Select the type of your activity
-                      (cycling or running). <br />
-                      <strong>3.</strong> Fill in the required details about
-                      your workout such as <strong>distance</strong>,
-                      <strong>time</strong>,
-                      <strong>cadence</strong> (steps/min) if running or
+                      <strong>2.</strong> Select the type of your activity (cycling or running). <br />
+                      <strong>3.</strong> Fill in the required details about your workout such as
+                      <strong>distance</strong>, <strong>time</strong>, <strong>cadence</strong> (steps/min) if running
+                      or
                       <strong>elevation gain</strong>
-                      if cycling. The <strong> pace/speed</strong> will be
-                      calculated automatically.
+                      if cycling. The <strong> pace/speed</strong> will be calculated automatically.
                     </p>
                     <ul style="margin-top: 4px">
-                      <li>
-                        Mapty is built using the architecture of "Object
-                        Oriented Programming" [OOP] Paradigm.
-                      </li>
+                      <li>Mapty is built using the architecture of "Object Oriented Programming" [OOP] Paradigm.</li>
                       <li>
                         Its logic is implemented using 2 classes: <br />
                         "Running" and "Cycling" <br />
@@ -146,18 +149,9 @@
 
                       <li>Both inherit from a base class named "Workout".</li>
                       <li>
-                        <a
-                          target="_blank"
-                          href="https://vahan-sahakyan.github.io/mapty"
-                          >Launch Mapty</a
-                        >
+                        <a target="_blank" href="https://vahan-sahakyan.github.io/mapty">Launch Mapty</a>
                         |
-                        <a
-                          target="_blank"
-                          href="https://github.com/vahan-sahakyan/mapty/"
-                        >
-                          Source Code</a
-                        >
+                        <a target="_blank" href="https://github.com/vahan-sahakyan/mapty/"> Source Code</a>
                       </li>
                     </ul>
 
@@ -168,40 +162,21 @@
                     <h4>Musical Intrument Application</h4>
                     <p>
                       E-Piano is a
-                      <strong>Music-Keyboard Emulator</strong> inside your
-                      browser. It allows you to play beautiful chords and
-                      melodies, without even needing an additional
-                      Midi-Controller keyboard attached. All you'll really need
-                      is a regular <strong>typing keyboard</strong> in front of
-                      your PC.
+                      <strong>Music-Keyboard Emulator</strong> inside your browser. It allows you to play beautiful
+                      chords and melodies, without even needing an additional Midi-Controller keyboard attached. All
+                      you'll really need is a regular <strong>typing keyboard</strong> in front of your PC.
                     </p>
                     <ul style="margin-top: 4px">
+                      <li>E-Piano is created using only the built-in Web Audio API of JavaScript.</li>
+                      <li>The code is conducted in a modular way, and the architecture is OOP.</li>
                       <li>
-                        E-Piano is created using only the built-in Web Audio API
-                        of JavaScript.
+                        The most comfortable/playable environment will be the Desktop Browser, although it's also
+                        possible to run inside a Mobile Browser.
                       </li>
                       <li>
-                        The code is conducted in a modular way, and the
-                        architecture is OOP.
-                      </li>
-                      <li>
-                        The most comfortable/playable environment will be the
-                        Desktop Browser, although it's also possible to run
-                        inside a Mobile Browser.
-                      </li>
-                      <li>
-                        <a
-                          target="_blank"
-                          href="https://vahan-sahakyan.github.io/e-piano"
-                          >Launch E-Piano</a
-                        >
+                        <a target="_blank" href="https://vahan-sahakyan.github.io/e-piano">Launch E-Piano</a>
                         |
-                        <a
-                          target="_blank"
-                          href="https://github.com/vahan-sahakyan/e-piano/"
-                        >
-                          Source Code</a
-                        >
+                        <a target="_blank" href="https://github.com/vahan-sahakyan/e-piano/"> Source Code</a>
                       </li>
                     </ul>
                   </div>
