UPDATE: added React Project

--- a/index.html
+++ b/index.html
@@ -90,10 +90,6 @@
                     <h3>PROFESSIONAL</h3>
 
                     <ul>
-                      <li>Web Design</li>
-                      <li>JavaScript</li>
-                      <li>HTML/CSS</li>
-                      <li>UI/UX</li>
                       <li>MERN Stack</li>
                       <ul>
                         <li><strong>M</strong>ongoDB</li>
@@ -101,7 +97,9 @@
                         <li><strong>R</strong>eact JS</li>
                         <li><strong>N</strong>ode JS</li>
                       </ul>
-                      <li>OOP</li>
+                      <li>Redux / Saga</li>
+                      <li>APIs / Postman</li>
+                      <li>Git - Version Control</li>
                     </ul>
                   </div>
                   <div class="education">
@@ -122,33 +120,29 @@
                   <div class="experience">
                     <h2>PROJECTS</h2>
                     <h3>
-                      MAPTY
+                      CRWN CLOTHING
                       <!-- <span> | JavaScript</span> -->
                     </h3>
-                    <h4>Workout Application</h4>
-                    <p>
-                      Mapty is a <strong>Workout Mapping Web-App</strong>. It saves your workouts and then logs them on
-                      the map in ONLY 3 STEPS
-                      <br />
-                      <strong>1.</strong> Click on the map to register the workout location, which will trigger a
-                      workout log to appear on the left.
-                      <br />
-                      <strong>2.</strong> Select the type of your activity (cycling or running). <br />
-                      <strong>3.</strong> Fill in the required details about your workout such as
-                      <strong>distance</strong>, <strong>time</strong>, <strong>cadence</strong> (steps/min) if running
-                      or
-                      <strong>elevation gain</strong>
-                      if cycling. The <strong> pace/speed</strong> will be calculated automatically.
-                    </p>
-                    <ul style="margin-top: 4px">
-                      <li>Mapty is built using the architecture of "Object Oriented Programming" [OOP] Paradigm.</li>
-                      <li>
-                        Its logic is implemented using 2 classes: <br />
-                        "Running" and "Cycling" <br />
-                      </li>
+                    <h4>REACT | REDUX | SAGA | STYLED COMPONENTS</h4>
+                    <!-- TEXT START -->
 
-                      <li>Both inherit from a base class named "Workout".</li>
-                      <li>
+                    <p>
+                      CRWN Clothing is an <strong>E-Commerce Web Application</strong>. It has navigation and routing
+                      which takes us to different pages of categories of items and from these items we are able to add
+                      them to the cart, and from our cart we see things directly update, from the cart we are able to
+                      checkout, increase and decrease added items, and see the live changes in both our checkout page
+                      and cart dropdown, remove items. With Firebase we authorize our Users using Google, so that they
+                      can sign in with their google accounts. Once we sign-in, it also provides a "Sign-Out" feature,
+                      and a "Sign-Up with Email and Password" feature.
+                    </p>
+                    <!-- TEXT END -->
+                    <ul style="margin-top: 4px">
+                      <li>Redux-Sagas for efficient asynchronous requests</li>
+                      <li>Styled-Components for dynamic stylings</li>
+                      <li>Stripe API for handling payments [test version]</li>
+                      <li>Firebase for Authentication and Storage [Firestore]</li>
+
+                      <li class="project-cta">
                         <a target="_blank" href="https://vahan-sahakyan.github.io/mapty">Launch Mapty</a>
                         |
                         <a target="_blank" href="https://github.com/vahan-sahakyan/mapty/"> Source Code</a>
@@ -159,7 +153,7 @@
                       E-PIANO
                       <!-- <span> | JavaScript</span> -->
                     </h3>
-                    <h4>Musical Intrument Application</h4>
+                    <h4>Musical Intrument App - Vanilla JavaScript</h4>
                     <p>
                       E-Piano is a
                       <strong>Music-Keyboard Emulator</strong> inside your browser. It allows you to play beautiful
@@ -168,12 +162,9 @@
                     </p>
                     <ul style="margin-top: 4px">
                       <li>E-Piano is created using only the built-in Web Audio API of JavaScript.</li>
-                      <li>The code is conducted in a modular way, and the architecture is OOP.</li>
-                      <li>
-                        The most comfortable/playable environment will be the Desktop Browser, although it's also
-                        possible to run inside a Mobile Browser.
-                      </li>
-                      <li>
+                      <li>The code is conducted in a modular way, and the architecture is OOP</li>
+                      <li>The most comfortable environment will be the Desktop Browser.</li>
+                      <li class="project-cta">
                         <a target="_blank" href="https://vahan-sahakyan.github.io/e-piano">Launch E-Piano</a>
                         |
                         <a target="_blank" href="https://github.com/vahan-sahakyan/e-piano/"> Source Code</a>
