added df-exp + final version

--- a/index.html
+++ b/index.html
@@ -103,73 +103,94 @@
                     </ul>
                   </div>
                   <div class="education">
-                    <h2>EDUCATION</h2>
-                    <h3>BPC Armenia</h3>
+                    <h3>EDUCATION</h3>
+                    <br />
+                    <h4>BOOTCAMP</h4>
+                    <h5>BPC Armenia</h5>
                     <p>C++, Python, Linux, Bash</p>
                     <p>2018-2019</p>
-                    <h3>UDEMY: Jonas Schmedtmann</h3>
+                    <br />
+                    <h4>COURSES</h4>
+                    <h5>UDEMY: Jonas Schmedtmann</h5>
                     <p>- "The Complete JS Course"</p>
                     <p>- "Node.js Bootcamp"<br />[MongoDB, Express]</p>
                     <p>2021-2022</p>
-                    <h3>ZTM: Andrei Neagoie</h3>
+                    <br />
+                    <h5>ZTM: Andrei Neagoie</h5>
                     <p>- REACT.js Course</p>
                     <p>2021-2022</p>
                   </div>
                 </aside>
                 <div class="content">
                   <div class="experience">
+                    <!-- EXPERIENCE START -->
+                    <h2>EXPERIENCE</h2>
+                    <h3 class="experience-name">DATAFOUNDRY LABS</h3>
+                    <div class="job-info">
+                      <h4>
+                        SOFTWARE ENGINEER
+                        <span> | </span>
+                        REACT
+                      </h4>
+                      <p>4 months</p>
+                    </div>
+
+                    <ul style="margin-top: 4px">
+                      <li><strong>CRMS [SaaS]</strong> complex project</li>
+                    </ul>
+                    <!-- EXPERIENCE END -->
+
+                    <!-- PROJECTS START -->
+                    <br />
                     <h2>PROJECTS</h2>
-                    <h3>
+                    <h3 class="experience-name">
                       CRWN CLOTHING
                       <!-- <span> | JavaScript</span> -->
                     </h3>
-                    <h4>REACT | REDUX | SAGA | STYLED COMPONENTS</h4>
-                    <!-- TEXT START -->
+                    <h4>
+                      REACT <span> | </span> REDUX <span> | </span> SAGA <span> | </span> STRIPE
+                      <span> | </span> FIREBASE
+                    </h4>
 
                     <p>
-                      CRWN Clothing is an <strong>E-Commerce Web Application</strong>. It has navigation and routing
-                      which takes us to different pages of categories of items and from these items we are able to add
-                      them to the cart, and from our cart we see things directly update, from the cart we are able to
-                      checkout, increase and decrease added items, and see the live changes in both our checkout page
-                      and cart dropdown, remove items. With Firebase we authorize our Users using Google, so that they
-                      can sign in with their google accounts. Once we sign-in, it also provides a "Sign-Out" feature,
-                      and a "Sign-Up with Email and Password" feature.
+                      CRWN Clothing is an <strong>E-Commerce Web Application</strong>. It has navigation and routing to
+                      redirect between pages of categories of items. The items can be added to the Cart which reflects
+                      all the live updates, it has a CTA to the checkout page, where you can increment and decrement the
+                      added items, remove them, the changes are visible both on checkout page and cart dropdown. With
+                      Firebase to authorize our Users with their Google Accounts. Once we Sign-in, it also provides
+                      features like "Sign-Up with Email and Password" and "Sign-Out".
                     </p>
-                    <!-- TEXT END -->
                     <ul style="margin-top: 4px">
-                      <li>Redux-Sagas for efficient asynchronous requests</li>
-                      <li>Styled-Components for dynamic stylings</li>
-                      <li>Stripe API for handling payments [test version]</li>
-                      <li>Firebase for Authentication and Storage [Firestore]</li>
+                      <li><strong>Redux-Sagas</strong> for efficient asynchronous requests</li>
+                      <li><strong>Styled-Components</strong> for dynamic stylings</li>
+                      <li><strong>Stripe API</strong> for handling payments [test version]</li>
+                      <li><strong>Firebase</strong> for Authentication and Storage [Firestore]</li>
 
                       <li class="project-cta">
-                        <a target="_blank" href="https://vahan-sahakyan.github.io/mapty">Launch Mapty</a>
+                        <a target="_blank" href="https://vahan-sahakyan.github.io/crwn-clothing">CRWN Clothing</a>
                         |
-                        <a target="_blank" href="https://github.com/vahan-sahakyan/mapty/"> Source Code</a>
+                        <a target="_blank" href="https://github.com/vahan-sahakyan/crwn-clothing/">Source Code</a>
                       </li>
                     </ul>
-
-                    <h3 style="margin-top: -25px">
+                    <h3 class="experience-name">
                       E-PIANO
                       <!-- <span> | JavaScript</span> -->
                     </h3>
-                    <h4>Musical Intrument App - Vanilla JavaScript</h4>
+                    <h4>JavaScript <span> | </span> Audio API <span> | </span> OOP</h4>
                     <p>
-                      E-Piano is a
-                      <strong>Music-Keyboard Emulator</strong> inside your browser. It allows you to play beautiful
-                      chords and melodies, without even needing an additional Midi-Controller keyboard attached. All
-                      you'll really need is a regular <strong>typing keyboard</strong> in front of your PC.
+                      E-Piano is an in-browser
+                      <strong>Music-Keyboard Emulator</strong>.
                     </p>
                     <ul style="margin-top: 4px">
-                      <li>E-Piano is created using only the built-in Web Audio API of JavaScript.</li>
-                      <li>The code is conducted in a modular way, and the architecture is OOP</li>
-                      <li>The most comfortable environment will be the Desktop Browser.</li>
+                      <li><strong>JS Audio API</strong> for manipulating sounds</li>
+                      <li><strong>OOP Paradigm</strong> for future enhancements [other keyboard type instances]</li>
                       <li class="project-cta">
-                        <a target="_blank" href="https://vahan-sahakyan.github.io/e-piano">Launch E-Piano</a>
+                        <a target="_blank" href="https://vahan-sahakyan.github.io/e-piano">E-Piano</a>
                         |
                         <a target="_blank" href="https://github.com/vahan-sahakyan/e-piano/"> Source Code</a>
                       </li>
                     </ul>
+                    <!-- PROJECTS END -->
                   </div>
                 </div>
               </div>
