--- a/index.html
+++ b/index.html
@@ -125,10 +125,7 @@
                   <div class="experience">
                     <!-- PROJECTS START -->
                     <h2>PROJECTS</h2>
-                    <h3 class="experience-name">
-                      CRWN CLOTHING
-                      <!-- <span> | JavaScript</span> -->
-                    </h3>
+                    <h3 class="experience-name">CRWN CLOTHING</h3>
                     <h4>
                       REACT <span> | </span> REDUX <span> | </span> SAGA <span> | </span> STRIPE
                       <span> | </span> FIREBASE
@@ -139,7 +136,7 @@
                       redirect between pages of categories of items. The items can be added to the Cart which reflects
                       all the live updates, it has a CTA to the checkout page, where you can increment and decrement the
                       added items, remove them, the changes are visible both on checkout page and cart dropdown. With
-                      Firebase to authorize our Users with their Google Accounts. Once we Sign-in, it also provides
+                      Firebase we authorize our Users by using their Google Accounts. Besides "Sign-in", we also have
                       features like "Sign-Up with Email and Password" and "Sign-Out".
                     </p>
                     <ul style="margin-top: 4px">
@@ -154,10 +151,7 @@
                         <a target="_blank" href="https://github.com/vahan-sahakyan/crwn-clothing/">Source Code</a>
                       </li>
                     </ul>
-                    <h3 class="experience-name">
-                      E-PIANO
-                      <!-- <span> | JavaScript</span> -->
-                    </h3>
+                    <h3 class="experience-name">E-PIANO</h3>
                     <h4>JavaScript <span> | </span> Audio API <span> | </span> OOP</h4>
                     <p>
                       E-Piano is an in-browser
