--- a/index.html
+++ b/index.html
@@ -20,6 +20,21 @@
         <div class="left"></div>
         <div class="middle">
           <!-- The A4 CV Paper -->
+          <a id="download" href="./download/REACT-Vahan-Sahakyan.pdf" download="REACT_Vahan_Sahakyan"
+            ><svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+              strokeWidth="{2}"
+            >
+              <path
+                strokeLinecap="round"
+                strokeLinejoin="round"
+                d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4"
+              /></svg
+            ><span>Download PDF</span></a
+          >
           <div class="a4">
             <div class="glass">
               <a href="">
